--- a/apps/bills/tally/templates/tally/settings/ledgers.html
+++ b/apps/bills/tally/templates/tally/settings/ledgers.html
@@ -19,12 +19,7 @@
             <div class="card table-card">
                 <div class="card-header">
                     <div class="d-sm-flex align-items-center justify-content-between">
-                        <h5 class="mb-3 mb-sm-0">Taxes</h5>
-                        <div>
-                            <a href="{% url 'zoho:fetchTax' team.slug %}" class="btn btn-primary">
-                                Sync Taxes
-                            </a>
-                        </div>
+                        <h5 class="mb-3 mb-sm-0">Ledgers</h5>
                     </div>
                 </div>
 
