--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -6,7 +6,7 @@
         <div class="m-header">
             <a href="{% url 'web:home' %}" class="b-brand text-primary">
                 <!-- ========   Change your logo from here   ============ -->
-                <img class="img-fluid logo-lg" alt="logo" src={% static "assets/images/logo-dark.svg" %}/>
+                <img class="img-fluid logo-lg" alt="logo" src={% static 'assets/images/logo-dark.svg' %}/>
                 <span class="badge bg-light-success rounded-pill ms-2 theme-version">v1.0.0</span>
             </a>
         </div>
