--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -11,14 +11,14 @@
     <div class="auth-main">
         <div class="auth-wrapper v2">
             <div class="auth-sidecontent">
-                <img src={% static "assets/images/authentication/img-auth-sideimg.jpg" %} alt="images"
+                <img src="{% static "assets/images/authentication/img-auth-sideimg.jpg" %}" alt="images"
                      class="img-fluid img-auth-side"/>
             </div>
             <div class="auth-form">
                 <div class="card my-5">
                     <div class="card-body">
                         <div class="text-center">
-                            <a href="#"><img alt="img" src={% static "assets/images/logo-dark.svg" %}/></a>
+                            <a href="#"><img src="{% static "assets/images/logo-dark.svg" %}" alt="img"/></a>
                         </div>
                         <br/>
                         <h4 class="text-center f-w-500 mb-3">Login with your email</h4>
