--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -15,8 +15,8 @@
                 <div class="card-body">
                     <div class="d-flex align-items-center">
                         <div class="flex-shrink-0">
-                            <img alt="user-image" class="user-avtar wid-45 rounded-circle"
-                                 src={{ request.user.avatar_url }}/>
+                            <img src="{{ request.user.avatar_url }}" alt="user-image"
+                                 class="user-avtar wid-45 rounded-circle"/>
                         </div>
                         <div class="flex-grow-1 ms-3 me-2">
                             <h6 class="mb-0">{{ request.user.get_display_name }}</h6>
