--- a/apps/bills/zoho/templates/zoho/settings/credentials/credentials.html
+++ b/apps/bills/zoho/templates/zoho/settings/credentials/credentials.html
@@ -7,7 +7,7 @@
 
 {% block css1 %}
     <!-- Add your CSS block content here if any -->
-    <link rel="stylesheet" href={% static "libs/notifier-js/dist/css/notifier.css" %}/>
+    <link href="{% static "libs/notifier-js/dist/css/notifier.css" %}" rel="stylesheet"/>
 {% endblock %}
 
 {% block css2 %}
