--- a/apps/bills/tally/templates/tally/expense/components/table_actions.html
+++ b/apps/bills/tally/templates/tally/expense/components/table_actions.html
@@ -4,18 +4,18 @@
             data-bs-toggle="modal"
             data-bs-target="#billModal"
             data-bill-id="{{ bill.id }}"
-            data-url="{% url 'zoho:view_expense_bill' team.slug bill.id %}">
+            data-url="{% url 'tally:view_expense_bill' team.slug bill.id %}">
         View Bill
     </button>
     {% if bill.status == "Draft" %}
-        <a href="{% url 'zoho:expense_bill_analysis_process' team.slug bill.id %}">
+        <a href="{% url 'tally:expense_bill_analysis_process' team.slug bill.id %}">
             <button type="button" class="btn btn-info btn-sm">Start
                 Analyze
             </button>
         </a>
     {% elif bill.status == "Analyzed" %}
         {% if bill.process %}
-            <a href="{% url 'zoho:expense_bill_verification_process' team.slug bill.id %}">
+            <a href="{% url 'tally:expense_bill_verification_process' team.slug bill.id %}">
                 <button type="button" class="btn btn-sm btn-warning">
                     Verify
                 </button>
@@ -23,23 +23,23 @@
         {% endif %}
     {% elif bill.status == "Verified" %}
         {% if bill.process %}
-            <a href="{% url 'zoho:expense_bill_verification_process' team.slug bill.id %}">
+            <a href="{% url 'tally:expense_bill_verification_process' team.slug bill.id %}">
                 <button type="button" class="btn btn-sm btn-warning">
                     Re-Verify
                 </button>
             </a>
-            <a href="{% url 'zoho:expense_bill_sync_process' team.slug bill.id %}">
+            <a href="{% url 'tally:expense_bill_sync_process' team.slug bill.id %}">
                 <button type="button" class="btn btn-sm btn-success">
                     Sync
                 </button>
             </a>
         {% endif %}
     {% else %}
-        <a href="{% url 'zoho:expense_bills_sync_detail' team.slug bill.id %}">
+        <a href="{% url 'tally:expense_bills_sync_detail' team.slug bill.id %}">
             <button type="button" class="btn btn-warning btn-sm">Detail</button>
         </a>
     {% endif %}
-    <a href="{% url 'zoho:expense_bill_delete' team.slug bill.id %}">
+    <a href="{% url 'tally:expense_bill_delete' team.slug bill.id %}">
         <button type="button" class="btn btn-danger btn-sm">Delete
         </button>
     </a>
