--- a/templates/layouts/menu-list.html
+++ b/templates/layouts/menu-list.html
@@ -72,7 +72,7 @@
         <ul class="pc-submenu">
             <li class="pc-item"><a class="pc-link" href="{% url 'tally:vendor_bill_list' team.slug %}">Vendor Bills</a>
             </li>
-            <li class="pc-item"><a class="pc-link" href="{% url 'zoho:expense_bill_list' team.slug %}">Expense
+            <li class="pc-item"><a class="pc-link" href="{% url 'tally:expense_bill_list' team.slug %}">Expense
                 Journal</a>
             </li>
             <li class="pc-item pc-hasmenu">
