--- a/templates/layouts/footer-block.html
+++ b/templates/layouts/footer-block.html
@@ -3,7 +3,7 @@
   <div class="footer-wrapper container-fluid">
     <div class="row">
       <div class="col my-1">
-        <p class="m-0">2025 @ <a href="https://geniusvision.in" target="_blank">GVD</a></p>
+        <p class="m-0">2025 @ <a href="https://billmunshi.in" target="_blank">Billmunshi</a></p>
       </div>
       <div class="col-auto my-1">
         <ul class="list-inline footer-link mb-0">
