--- a/apps/bills/tally/templates/tally/expense/verify_bill.html
+++ b/apps/bills/tally/templates/tally/expense/verify_bill.html
@@ -87,30 +87,34 @@
                     <form method="post" action="">
                         {% csrf_token %}
                         <div class="row mt-2">
-                            <div class="col-md-4">
+                            <div class="col-md-3">
                                 <label for="{{ bill_form.vendor.id_for_label }}" class="form-label">Select
                                     Vendor</label>
                                 {% render_field bill_form.vendor class="form-select js-example-basic-single" %}
                                 {{ bill_form.vendor.errors }}
-                                <p class="text-muted" id="gst_field"> GST :</p>
                                 {% if not bill_form.vendor.value or bill_form.vendor.value == "------" %}
                                     <span class="badge text-bg-success">New Vendor</span> :
                                     {{ detailBill.analysed_data.from.name }}
                                 {% endif %}
 
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-3">
                                 <label for="{{ bill_form.bill_no.id_for_label }}" class="form-label">Bill
                                     No.</label>
                                 {% render_field bill_form.bill_no class="form-control" %}
                                 {{ bill_form.bill_no.errors }}
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-3">
                                 <label for="{{ bill_form.bill_date.id_for_label }}" class="form-label">Bill
                                     Date</label>
                                 {% render_field bill_form.bill_date class="form-control" type="date" %}
                                 {{ bill_form.bill_date.errors }}
                                 <p class="text-muted"> Date Format: &nbsp; DD/MM/YYYY</p>
+                            </div>
+                            <div class="col-md-3">
+                                <label for="{{ bill_form.voucher.id_for_label }}" class="form-label">Voucher</label>
+                                {% render_field bill_form.voucher class="form-control" %}
+                                {{ bill_form.voucher.errors }}
                             </div>
                         </div>
                         <!-- Products -->
@@ -149,32 +153,58 @@
                                 </tbody>
                             </table>
                         </div>
-                        <!-- CGST/IGST/SGST -->
+                        <!-- IGST, CGST, SGST, and Total with Dropdown Selection -->
                         <div class="row m-2">
-                            <div class="col-md-3">
-                                <label for="{{ bill_form.csgt.id_for_label }}" class="form-label">CGST
+                            <!-- CGST -->
+                            <div class="col-md-6 d-flex align-items-center">
+                                <label for="{{ bill_form.cgst.id_for_label }}" class="form-label col-md-4">CGST
                                     (INR)</label>
-                                {% render_field bill_form.cgst class="form-control" %}
-                                {{ bill_form.cgst.errors }}
+                                <div class="col-md-4 m-1">
+                                    {% render_field bill_form.cgst class="form-control" %}
+                                    {{ bill_form.cgst.errors }}
+                                </div>
+                                <div class="col-md-4 m-1">
+                                    {% render_field bill_form.cgst_taxes class="form-select" %}
+                                    {{ bill_form.cgst_taxes.errors }}
+                                </div>
                             </div>
-                            <div class="col-md-3">
-                                <label for="{{ bill_form.sgst.id_for_label }}" class="form-label">SGST
+                            <!-- SGST -->
+                            <div class="col-md-6 d-flex align-items-center">
+                                <label for="{{ bill_form.sgst.id_for_label }}" class="form-label col-md-4">SGST
                                     (INR)</label>
-                                {% render_field bill_form.sgst class="form-control" %}
-                                {{ bill_form.sgst.errors }}
+                                <div class="col-md-4 m-1">
+                                    {% render_field bill_form.sgst class="form-control" %}
+                                    {{ bill_form.sgst.errors }}
+                                </div>
+                                <div class="col-md-4 m-1">
+                                    {% render_field bill_form.sgst_taxes class="form-select" %}
+                                    {{ bill_form.sgst_taxes.errors }}
+                                </div>
                             </div>
-                            <div class="col-md-3">
-                                <label for="{{ bill_form.igst.id_for_label }}" class="form-label">IGST
+                        </div>
+                        <div class="row m-2">
+                            <!-- IGST -->
+                            <div class="col-md-6 d-flex align-items-center">
+                                <label for="{{ bill_form.igst.id_for_label }}" class="form-label col-md-4">IGST
                                     (INR)</label>
-                                {% render_field bill_form.igst class="form-control" %}
-                                {{ bill_form.igst.errors }}
+                                <div class="col-md-4 m-1">
+                                    {% render_field bill_form.igst class="form-control" %}
+                                    {{ bill_form.igst.errors }}
+                                </div>
+                                <div class="col-md-4 m-1">
+                                    {% render_field bill_form.igst_taxes class="form-select" %}
+                                    {{ bill_form.igst_taxes.errors }}
+                                </div>
                             </div>
-                            <!-- Total of Bill -->
-                            <div class="col-md-3">
-                                <label for="{{ bill_form.total.id_for_label }}" class="form-label">Total
+
+                            <!-- Total -->
+                            <div class="col-md-6 d-flex align-items-center">
+                                <label for="{{ bill_form.total.id_for_label }}" class="form-label col-md-4">Total
                                     (INR)</label>
-                                {% render_field bill_form.total class="form-control" %}
-                                {{ bill_form.total.errors }}
+                                <div class="col-md-8">
+                                    {% render_field bill_form.total class="form-control" %}
+                                    {{ bill_form.total.errors }}
+                                </div>
                             </div>
                         </div>
                         <!-- Notes -->
