--- a/templates/layouts/menu-list.html
+++ b/templates/layouts/menu-list.html
@@ -64,7 +64,7 @@
     <li class="pc-item pc-hasmenu">
         <a href="javascript:void(0);" class="pc-link">
             <span class="pc-micon">
-              <i class="material-icons-two-tone">find_in_page</i>
+              <i class="fas fa-file-invoice"></i>
             </span>
             <span class="pc-mtext">Tally Bills</span>
             <span class="pc-arrow"><i data-feather="chevron-right"></i></span>
